<resources>
    <string name="app_name">My First App</string>
    <string name="app_ver">ver: 1.1b initial release</string>
    <string name="app_copy">created by Daniel Horky - All rights reserved</string>
    <string name="desc_title">What is tattva?</string>
    <string name="desc">"Tattva is a Sanskrit word meaning ‘principle’, ‘reality’ or ‘truth’. According to various Indian schools of philosophy, a tattva is an element or aspect of reality conceived as an aspect of deity. Although the number of tattvas varies depending on the philosophical school, together they are thought to form the basis of all our experience.

Day is divided into five basic tattvas and it starts with Akāśa on every sunrise. Pṛithvī - earth, Jala – water, Tejas – fire, Vāyu – air and Akāśa – ether. These Tattvas change regularly in two-hour cycle. This means that the duration of one Tattva is 24 minutes. Each Tattva has a different color, shape and other properties. In each tattva something is appropriate or inappropriate to do.

Compliance tattvas leads to improved lifestyle habits and physical and mental health."</string>
    <string name="desc_tat1_title">Ākāśa</string>
    <string name="desc_tat1">"Favorable for meditation
- Do not eat
- Do not drink
- Do not breastfeed
- Refrain from conception
- Do not enter into marriage
- Do not enter into agreements"</string>
    <string name="desc_tat2_title">Vāyu</string>
    <string name="desc_tat2">"Suitable for traveling
- Refrain from conception
- Do not enter into marriage
- The possibility of theft
- There occurs of scams, murders and suicides"</string>
    <string name="desc_tat3_title">Tejas</string>
    <string name="desc_tat3">"Suitable for working
+ Training
+ Weight Loss
+ Physical development
+ Hardening
+ Eating
- Do not expose to danger"</string>
    <string name="desc_tat4_title">Prithvī</string>
    <string name="desc_tat4">"Suitable to all event
+ Conclusion of contracts
+ Conclusion of marriages
+ New resolutions
+ Business
+ Quitting habits"</string>
    <string name="desc_tat5_title">Apas (also Jala)</string>
    <string name="desc_tat5">"Suitable for short-term goals
+ Conclusion of contracts
+ Stakes and financial objectives"</string>
    <string name="h_sr">Sunrise:</string>
    <string name="h_ss">Sunset:</string>
    <string name="h_tt">Tattva:</string>
    <string name="h_nt">Next tattva:</string>
    <string name="tatvaEnd1">To end of this tatva remains</string>
    <string name="tatvaEnd2">To end of this tatva remains less than minute</string>
    <string name="tat1">Akaza</string>
    <string name="tat2">Vayu</string>
    <string name="tat3">Tejas</string>
    <string name="tat4">Prithivi</string>
    <string name="tat5">Apas</string>
    <string name="tat6">Adi</string>
    <string name="tat7">Samadhi</string>
    <string name="tab3">Today</string>
    <string name="tab4">Tomorrow</string>
    <string name="tab5">Tattvas for date</string>
    <string name="for1">Forecast for day:</string>
    <string name="for2">Tattva:</string>
    <string name="for3">Time:</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_category1">Main screen</string>
    <string name="pref_category2">Forecast screen</string>
    <string name="pref_category3">Location</string>
    <string name="pref_category4">Time</string>
    <string name="pref_view">Forecast interface</string>
    <string name="pref_view_more">if you have a problem with display of forecast, please select compact</string>
    <string name="pref_freq">Update frequency</string>
    <string name="pref_freq_more">set speed of updates on main screen</string>
    <string name="pref_circle">Show next Tattva</string>
    <string name="pref_circle_more">show/hide next Tattva circle in clock</string>
    <string name="pref_internet_time">Use Internet time</string>
    <string name="pref_internet_time_summary">Better data - require internet connection</string>
    <string name="pref_gps">Use own location</string>
    <string name="pref_gps_summary">set your own location</string>
    <string name="pref_gps_latitude">Latitude</string>
    <string name="pref_gps_latitude_summary">write latitude here</string>
    <string name="pref_gps_longitude">Longitude</string>
    <string name="pref_gps_longitude_summary">write longitude here</string>

    <string name="pref_time_difference">minute</string>
    <string name="pref_time_difference_summary">time difference</string>

    <string name="w_change">Changed - restart of application is required!</string>

    <string name="inv_latitude">Latitude must be in range of -90 to 90</string>
    <string name="inv_longitude">Longitude must be in range of -180 to 180</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
