<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#5a5a5a"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:orientation="vertical"
            android:background="#0099cc"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="25">
            <FrameLayout
                android:background="#424242"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="0dp"
                android:layout_alignParentBottom="true">
                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/imageButton1"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/menu_1"
                    android:scaleType="fitXY"
                    android:onClick="onClick"/>
            </FrameLayout>
        </RelativeLayout>
        <RelativeLayout
            android:orientation="vertical"
            android:background="#669900"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="25">
            <FrameLayout
                android:background="#424242"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="0dp"
                android:layout_alignParentBottom="true">
                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/imageButton2"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/menu_2"
                    android:scaleType="fitXY"
                    android:onClick="onClick"/>
            </FrameLayout>
        </RelativeLayout>
        <RelativeLayout
            android:orientation="vertical"
            android:background="#9933cc"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="25">
            <FrameLayout
                android:background="#424242"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="0dp"
                android:layout_alignParentBottom="true">
                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/imageButton4"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/menu_4"
                    android:scaleType="fitXY"
                    android:onClick="onClick"/>
            </FrameLayout>
        </RelativeLayout>
        <RelativeLayout
            android:orientation="vertical"
            android:background="#cc0000"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="25">
            <FrameLayout
                android:background="#424242"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="0dp"
                android:layout_alignParentBottom="true">
                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/imageButton5"
                    android:background="@android:color/transparent"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/menu_5"
                    android:scaleType="fitXY"
                    android:onClick="onClick"/>
            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>
    <!--android:layout_above="@+id/widget_frame" -->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/widget_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/testing"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:layout_below="@+id/widget_frame"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:gravity="center"
        android:id="@+id/textView3"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_copy"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:id="@+id/textView2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/app_ver"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"/>
    <ImageView android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="120dp"
        android:src="@drawable/hodiny"
        android:scaleType="fitCenter"
        android:layout_above="@+id/linearLayout1"
        android:layout_below="@+id/testing"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>